--- a/social_media/style.css
+++ b/social_media/style.css
@@ -147,3 +147,22 @@ a:hover {
     display: block;
     color: #1877f2; /* Link color */
 }
+/* -------------------------------------------- */
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    padding: 10px 0;
+}
+
+li a {
+    color: #1877f2;
+    text-decoration: none;
+}
+
+li a:hover {
+    text-decoration: underline;
+}
