--- a/social_media/style.css
+++ b/social_media/style.css
@@ -166,3 +166,21 @@ li a {
 li a:hover {
     text-decoration: underline;
 }
+/* ------------------------------------------------- */
+
+nav {
+    background-color: #1877f2;
+    padding: 10px;
+    text-align: center;
+}
+
+nav a {
+    color: white;
+    margin: 0 15px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
